# machine-setup

./: .gitignore  README.md  bootstrap.sh  pyproject.toml
.github/workflows/: changelog.yml  ci.yml  lint.yml  release.yml  tests.yml
changelog.d/: 20260105_020728_sderev_preset_rename.md  20260126_030648_sderev_lua_love2d.md  20260126_colorized_logger.md  20260127_secrets_management.md  20260221_windows_apps_taskbar.md  20260222_private_config_required.md  20260308_windows_powershell_profile.md  20260309_filepilot_config_copy.md
machine_setup/: __main__.py  app_setup.py  claude_code.py  config.py  dev_env.py  dotfiles.py  installers.py  ipython_setup.py  keys.py  locale.py  main.py  npm_tools.py  packages.py  presets.py  private_config.py  secrets.py  shell.py  tools.py  utils.py  vim_setup.py  windows.py
src/machine_setup/: main.py
tests/: test_app_setup.py  test_claude_code.py  test_cli.py  test_config.py  test_dev_env.py  test_dotfiles.py  test_installers.py  test_ipython_setup.py  test_keys.py  test_main.py  test_npm_tools.py  test_packages.py  test_presets.py  test_private_config.py  test_secrets.py  test_shell.py  test_smoke.py  test_tools.py  test_utils.py  test_windows.py
