[project]
name = "machine-setup"
version = "0.1.0"
description = "Automated machine setup for Debian sid"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Sebastien De Reviere", email = "contact@sderev.com" }
]
dependencies = []

[project.optional-dependencies]
dev = ["ruff"]

[project.scripts]
machine-setup = "machine_setup.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["machine_setup"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
