[project]
name = "machine-setup"
version = "0.1.0"
description = "Personal development environment bootstrap"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Sebastien De Reviere", email = "contact@sderev.com" }
]
dependencies = ["click>=8.0"]

[project.scripts]
machine-setup = "machine_setup.main:main"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "scriv",
    # urllib3 is a transitive dependency of scriv (via requests). Pinned to fix CVE-2026-21441.
    "urllib3>=2.6.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["machine_setup"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
extend-select = ["I001"]

[tool.scriv]
format = "md"
fragment_directory = "changelog.d"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
